<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:padding="10dp">

    <TextView android:layout_width="wrap_content" 
              android:layout_height="wrap_content" 
              android:text="@string/label_username" />
              
    <EditText android:layout_height="wrap_content" 
              android:id="@+id/username" android:layout_width="fill_parent"/>
    
    <TextView android:layout_width="wrap_content" 
              android:layout_height="wrap_content" 
              android:text="@string/label_remotekey" />
    
    <EditText android:layout_height="wrap_content" 
              android:id="@+id/remotekey" android:layout_width="fill_parent"/>
              
    <Button android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:text="@string/button_save" 
            android:id="@+id/save" 
            android:paddingLeft="20dp" 
            android:paddingRight="20dp" 
            android:textStyle="bold" />
</LinearLayout>
